<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">xuntongwatch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sending">发送中...</string>

    <drawable name="clr_normal">#49c0fa</drawable>
    <drawable name="clr_pressed">#1444d6</drawable>

    <string name="edit_contact">编辑联系人</string>
    <string name="add_contact_sim">从sim卡导入联系人</string>
    <string name="add_contact">添加联系人</string>
    <string name="name">姓名</string>
    <string name="phone_number">手机号码</string>
    <string name="custom_photo_">自定义</string>
    <string name="custom_photo">头像编辑</string>
    <string name="sure">确定</string>
    <string name="keyboard_one">1</string>
    <string name="keyboard_two">2</string>
    <string name="keyboard_three">3</string>
    <string name="keyboard_four">4</string>
    <string name="keyboard_five">5</string>
    <string name="keyboard_six">6</string>
    <string name="keyboard_seven">7</string>
    <string name="keyboard_eight">8</string>
    <string name="keyboard_nine">9</string>
    <string name="keyboard_other_one">*</string>
    <string name="keyboard_other_two">0</string>
    <string name="keyboard_other_three">#</string>
    <string name="layout_weight_one">1</string>
    <string name="layout_weight_five">5</string>
    <string name="layout_weight_two">2</string>
    <string name="layout_weight_three">3</string>
    <string name="hello">你好</string>
    <string name="add">添加</string>
    <string name="photo_edit">头像编辑</string>
    <string name="calssics_photo">经典</string>
    <string name="next">下一步</string>
    <string name="time">1月6号，周二，20：45</string>
    <string name="time_one">昨天</string>
    <string name="time_two">呼出47秒</string>
    <string name="text_one">别让电子券过期，买注彩</string>
    <string name="text_two">好呀  ，等哪天有钱了，一定买一注。</string>
    <string name="text_four">移动 广东 深圳</string>
    <string name="name_one">王武（3）</string>
    <string name="name_two">小明</string>
    <string name="recipient">收件人:</string>
    <string name="cancel">取消</string>
    <string name="choose">已选择1项</string>
    <string name="contact_phone_number">15012614410</string>
    <string name="clean">清空记录</string>
    <string name="time_three">14:08</string>
    <string name="all_choose">全选</string>
    <string name="text_five">hello</string>
    <string name="no_contact">没有联系人</string>
    <string name="add_new_contact">点击菜单键添加联系人</string>
    <string name="record_reminder">无通话记录</string>
    <string name="imei">IMEI</string>

</resources>