<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:background="#000000"
        android:paddingBottom="5dp"
        android:orientation="horizontal">
        <ImageView 
            android:id="@+id/edit_head_title_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/edit_head_title_add"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <TextView 
            android:id="@+id/add_contact_add_or_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@string/layout_weight_one"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:text="@string/add_contact"
            />
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="@string/layout_weight_five"
        android:orientation="vertical">
        
        <RelativeLayout 
            android:layout_weight="@string/layout_weight_one"
            android:layout_width="fill_parent"
            android:layout_height="0dp">
            <TextView 
                android:id="@+id/add_contact_custom_head"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/custom_photo"
                android:textSize="30sp"
                android:textColor="#ffffff"
                android:paddingLeft="10dp"
                android:layout_marginLeft="8dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/input_box_green"
                />
        </RelativeLayout>
        <RelativeLayout 
            android:layout_weight="@string/layout_weight_one"
            android:layout_width="fill_parent"
            android:layout_height="0dp">
            <EditText 
                android:maxLength="8"
                android:id="@+id/add_contact_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="30sp"
                android:hint="@string/name"
                android:textColor="#000000"
                android:paddingLeft="10dp"
                android:layout_marginLeft="8dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/message_chat_input_box"
                />
        </RelativeLayout>
        <RelativeLayout 
            android:layout_weight="@string/layout_weight_one"
            android:layout_width="fill_parent"
            android:layout_height="0dp">
            <EditText 
                android:id="@+id/add_contact_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/phone_number"
                android:textSize="30sp"
                android:inputType="phone"
                android:textColor="#000000"
                android:paddingLeft="10dp"
                android:layout_marginLeft="8dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/message_chat_input_box"
                />
        </RelativeLayout>
        
    </LinearLayout>
     <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="@string/layout_weight_two"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView 
            android:id="@+id/add_contact_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sure"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:background="@drawable/edit_head_text_next_style"
            />
    </LinearLayout>
    
</LinearLayout>
