<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <com.example.xuntongwatch.view.MyTextView
        android:id="@+id/keyboad_tv"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/keyboad_bt_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/layout_weight_one"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_one"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/keyboad_bt_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/layout_weight_one"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_two"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/keyboad_bt_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/layout_weight_one"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_three"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="@string/layout_weight_one"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/keyboad_bt_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_four"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/keyboad_bt_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_five"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/keyboad_bt_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_six"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/keyboad_bt_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_seven"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/keyboad_bt_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_eight"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/keyboad_bt_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/layout_weight_one"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_nine"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="@string/layout_weight_one"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/keyboad_bt_xin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/layout_weight_one"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_other_one"
            android:textColor="#ffffff"
            android:textSize="35sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/keyboad_bt_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/layout_weight_one"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_other_two"
            android:textColor="#ffffff"
            android:textSize="30sp" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <Button
            android:id="@+id/keyboad_bt_jin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@string/layout_weight_one"
            android:background="@drawable/button_press"
            android:gravity="center"
            android:text="@string/keyboard_other_three"
            android:textColor="#ffffff"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:background="#000000"
        android:orientation="horizontal" >

        <RelativeLayout
            android:id="@+id/keyboad_rl_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="25dp"
            android:paddingRight="25dp" >

            <ImageView
                android:id="@+id/keyboad_iv_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="@drawable/back_press" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/keyboad_bt_call"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:background="@drawable/bt_call" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/keyboad_rl_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <ImageView
                android:id="@+id/keyboad_iv_delete"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:background="@drawable/delete_press" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>