<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:background="#000000"
        android:paddingBottom="5dp"
        android:orientation="horizontal">
        <ImageView 
            android:id="@+id/edit_head_title_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/edit_head_title_1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
        <TextView 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@string/layout_weight_one"
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:text="@string/photo_edit"
            />
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#eeeeee"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <RelativeLayout 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView 
                android:id="@+id/edit_head_custom_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_photo"
                android:layout_alignParentRight="true"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="#000000"
                android:textSize="25sp"
                android:background="@drawable/edit_head_text_style"
                android:layout_marginRight="20dp"/>
        </RelativeLayout>
        
        <View 
            android:layout_width="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_height="match_parent"
            android:background="#000000"
           	
            />
        
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView 
                android:id="@+id/edit_head_classic_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calssics_photo"
                android:textColor="#000000"
                android:textSize="25sp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_marginLeft="20dp"/>
        </RelativeLayout>
    </LinearLayout>
    
   
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="@string/layout_weight_two"
        android:orientation="vertical">
         <fragment
	       	android:id="@+id/edit_head_custom_fragment"
	        android:name="com.example.xuntongwatch.main.Edit_Head_Custom_Fragment"
	     	android:layout_width="fill_parent"
	        android:layout_height="match_parent" />
         <fragment
	       	android:id="@+id/edit_head_classic_fragment"
	        android:name="com.example.xuntongwatch.main.Edit_Head_Classic_Fragment"
	     	android:layout_width="fill_parent"
	        android:layout_height="match_parent" />
    </LinearLayout>
    
     <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="@string/layout_weight_one">
	    <TextView 
	        android:id="@+id/edit_head_next_tv"	
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/next"
	        android:textSize="30sp"
	        android:textColor="#ffffff"
	        android:background="@drawable/edit_head_text_next_style"
	        android:paddingTop="10dp"
	        android:paddingBottom="10dp"
	        android:paddingLeft="40dp"
	        android:paddingRight="40dp"
	        />
     </RelativeLayout>
    
</LinearLayout>
