<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="5dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/call_record_item_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/call_record_item_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/image_men" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/call_record_item_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/name_one"
                    android:textColor="#ffffff"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/call_record_item_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:text="@string/time_one"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/call_record_item_msg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha="0.6"
                    android:singleLine="true"
                    android:text="@string/text_four"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/call_record_item_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/call_out" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/call_record_item_other"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff4337"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:orientation="horizontal" >
        <RelativeLayout
            android:id="@+id/call_record_item_call_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/call_item" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/call_record_item_delete_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/delete_item" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/call_record_item_message_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/message_item" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>